--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
+        <script src="https://kit.fontawesome.com/c68c77c237.js" crossorigin="anonymous"></script>
     </body>
 
 </html>
